fix: make clicked headings not covered by navbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,6 +48,12 @@
   }
 }
 
+@layer components {
+  *:is(h2, h3, h4, h5, h6) {
+    @apply scroll-mt-16;
+  }
+}
+
 /* #region  /**=========== PhotoSwipe =========== */
 .pswp__lightbox-caption {
   @apply absolute bottom-[12px] left-1/2 z-10 flex w-11/12 -translate-x-1/2 items-center justify-center rounded-2xl bg-neutral-800/90 px-4 py-2 text-left text-gray-100 sm:text-center md:w-8/12 lg:w-7/12;
